Se modificaron botones, se agrego texto novedades home

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <p class="sku">sku: 1771234</p>
 
             <p class="precio mb-1">2.737,99 <del>4.737,99</del></p>
-            <button class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></button>
+            <a href="" class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></a>
 
           </a>
         </div>
@@ -136,7 +136,7 @@
             <p class="sku">sku: 177123</p>
 
             <p class="precio mb-1">3.500,99 <del>3.900,99</del></p>
-            <button class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></button>
+            <a href="" class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></a>
 
           </a>
         </div>
@@ -149,7 +149,7 @@
             <p class="sku">sku: 177355</p>
 
             <p class="precio mb-1">15.737,99 <del>16.737,99</del></p>
-            <button class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></button>
+            <a href="" class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></a>
 
           </a>
         </div>
@@ -162,7 +162,7 @@
             <p class="sku">sku: 237368</p>
 
             <p class="precio mb-1">11.737,99 <del>14.737,99</del></p>
-            <button class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></button>
+            <a href="" class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></a>
 
           </a>
         </div>
@@ -177,20 +177,22 @@
       <div class="col-md-6 p-2">
         <div class="h-100 p-5 bg-body-tertiary border rounded-3">
           <h2>NUEVO!! Set Advengers</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam ad nihil mollitia explicabo at, vero nemo
-            culpa? Dignissimos facilis vel aliquid et alias! Voluptatibus porro earum unde fugiat accusantium. Tempora!
-          </p>
-          <button class="btn-nov" type="button">Ver Mas</button>
+          <p>Prepárate para sumergirte en una aventura sin igual, donde la acción, la intriga y el poder se unen para crear la experiencia definitiva.
+
+            Descubre a tus héroes icónicos en increíbles nuevas formas y enfrenta desafíos épicos mientras luchas contra las fuerzas del mal. Cada carta es una obra maestra visual, capturando la esencia de los Avengers de una manera nunca vista.</p>
+            <a href="" class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></a>
         </div>
       </div>
       <div class="col-md-6 p-2">
         <div class="h-100 p-5 bg-body-tertiary border rounded-3">
           <h2>ULTIMAS UNIDADES!! Barbie Ultra Nails</h2>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda, nisi? Vero, enim est architecto
-            officiis
-            laudantium velit accusamus quidem at ea quisquam sint fuga labore accusantium similique sapiente ab ipsa?
+          <p> Descubre la magia de la moda con Barbie Ultra Nails 
+
+            Solo unas pocas unidades restantes de este set espectacular. ¡No te quedes sin el tuyo! Con Barbie Ultra Nails, la diversión y la creatividad se unen para ofrecerte horas de entretenimiento.
+            
+            Transforma tus uñas con los colores más vibrantes y diseños de ensueño. ¡Barbie te invita a explorar tu estilo único! 
           </p>
-          <button class="btn-nov" type="button">Ver Mas</button>
+          <a href="" class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></a>
         </div>
       </div>
     </div>
@@ -251,7 +253,7 @@
         <i class="fa-brands fa-whatsapp"></i>
 
         <h3>CONTACTANOS</h3>
-        <a id="a-link" href="tel: 5491168499677">+54 9 11 6849 9677</a>
+        <a id="a-link" href="https://web.whatsapp.com/">+54 9 11 6849 9677</a>
 
       </div>
 
