--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -157,7 +157,7 @@
         <i class="fa-brands fa-whatsapp"></i>
 
         <h3>CONTACTANOS</h3>
-        <a id="a-link" href="tel: 5491168499677">+54 9 11 6849 9677</a>
+        <a id="a-link" href="https://web.whatsapp.com/">+54 9 11 6849 9677</a>
 
       </div>
 
