--- a/paginas/novedades.html
+++ b/paginas/novedades.html
@@ -235,7 +235,7 @@ Sumérgete en mundos detallados y cautivadores con los sets de Playmobil.</p>
 
 
         <h3>VENTA TELEFÓNICA</h3>
-        <a id="a-link" href="tel: 5491147240633">11 4724 0633</a>
+        <a id="a-link" href="https://web.whatsapp.com/">11 4724 0633</a>
 
       </div>
       <div class="col-lg-3 col-sm-3 col-sm-12 text-center">
@@ -270,7 +270,7 @@ Sumérgete en mundos detallados y cautivadores con los sets de Playmobil.</p>
   <!-- FIN FOOTER -->
 
   <!-- WHATSAPP -->
-  <a href="https://web.whatsapp.com/" class="whatsapp">
+  <a href="https://web.whatsapp.com/" class="whatsapp" target="_blank">
     <i class="fa-brands fa-whatsapp"></i></i>
   </a>
   <!-- FIN WHATSAPP -->
