--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -3,8 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="description"
-    content="Juguetería Manzana Verde, productos de calidad de las mejores marcas." />
+  <meta name="description" content="Juguetería Manzana Verde, productos de calidad de las mejores marcas." />
   <meta name="keywords"
     content="CREATIVIDAD, JUEGOS DE MESA, LIBROS, PIZARRAS, MASAS, PLASTILINAS, BURBUJEROS, DISFRACES, METEGOLES, BICICLETAS, TRICICLOS, SKATES, MONOPATINES, ROLLERS, PATINES, INFLABLES, PELOTEROS, PAW PATROL, TOY STORY, CARS, PLAYMOBIL, SCOOBY DOO, PJ MASKS, FROZEN, NERF, MICKEY MOUSE, PEPPA PIG, LEGO, LA GRANJA DE ZENON, MUÑECAS, MUÑECOS Y PELUCHES, PRIMERA INFANCIA, CUNAS Y RODADOS, DIDÁCTICOS, JUGUETES" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -90,7 +89,7 @@
               <p class="sku">sku: 177368</p>
 
               <p class="precio mb-1">45.737,99 <del>45.737,99</del></p>
-              <button class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></button>
+              <a href="" class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></a>
 
             </a>
           </div>
@@ -103,7 +102,7 @@
               <p class="sku">sku: 177348</p>
 
               <p class="precio mb-1">5.737,99 <del>8.737,99</del></p>
-              <button class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></button>
+              <a href="" class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></a>
 
             </a>
           </div>
@@ -116,7 +115,7 @@
               <p class="sku">sku: 17864567</p>
 
               <p class="precio mb-1">15.727,00 <del>18.737,00</del></p>
-              <button class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></button>
+              <a href="" class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></a>
 
             </a>
           </div>
@@ -129,7 +128,7 @@
               <p class="sku">sku: 347368</p>
 
               <p class="precio mb-1">12.00,00 <del>13.00,00</del></p>
-              <button class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></button>
+              <a href="" class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></a>
 
             </a>
           </div>
@@ -154,8 +153,7 @@
               <p class="sku">sku: 1771234</p>
 
               <p class="precio mb-1">2.737,99 <del>4.737,99</del></p>
-              <button class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></button>
-
+              <a href="" class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></a>
             </a>
           </div>
 
@@ -167,7 +165,7 @@
               <p class="sku">sku: 177123</p>
 
               <p class="precio mb-1">3.500,99 <del>3.900,99</del></p>
-              <button class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></button>
+              <a href="" class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></a>
 
             </a>
           </div>
@@ -180,7 +178,7 @@
               <p class="sku">sku: 177355</p>
 
               <p class="precio mb-1">15.737,99 <del>16.737,99</del></p>
-              <button class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></button>
+              <a href="" class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></a>
 
             </a>
           </div>
@@ -193,7 +191,7 @@
               <p class="sku">sku: 237368</p>
 
               <p class="precio mb-1">11.737,99 <del>14.737,99</del></p>
-              <button class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></button>
+              <a href="" class="ver-producto py-2 px-4"><span>VER PRODUCTO</span></a>
 
             </a>
           </div>
@@ -239,7 +237,7 @@
         <i class="fa-brands fa-whatsapp"></i>
 
         <h3>CONTACTANOS</h3>
-        <a id="a-link" href="tel: 5491168499677">+54 9 11 6849 9677</a>
+        <a id="a-link" href="https://web.whatsapp.com/">+54 9 11 6849 9677</a>
 
       </div>
 
